--- a/API1.ipynb
+++ b/API1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM35e440xhhxD9fwZCscBCm",
+      "authorship_tag": "ABX9TyMOhv44eSwqCKwAP6RxGL40",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,6 +102,101 @@
           "name": "stdout",
           "text": [
             "{\"fact\":\"When a cat chases its prey, it keeps its head level. Dogs and humans bob their heads up and down.\",\"length\":97}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(data.text))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K060iUni1kUO",
+        "outputId": "0a72e0a9-14ef-4a69-fa53-b6c9eab0b696"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cat_fact = data.text"
+      ],
+      "metadata": {
+        "id": "ljQllBAy1vvh"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(cat_fact)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I3fK04bE15g_",
+        "outputId": "61f8c9a7-b1fc-417d-847b-9933b2420825"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\"fact\":\"When a cat chases its prey, it keeps its head level. Dogs and humans bob their heads up and down.\",\"length\":97}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = requests.get('https://catfact.ninja/fact')"
+      ],
+      "metadata": {
+        "id": "PwJjoNRU74V6"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a.status_code == 200:\n",
+        "  print(a.text)\n",
+        "\n",
+        "else:\n",
+        "    print('Error')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QQUd-mDn8TXZ",
+        "outputId": "db93640a-f0c1-4e3e-cc90-5a89e4f553af"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\"fact\":\"Cats can be right-pawed or left-pawed.\",\"length\":38}\n"
           ]
         }
       ]
